; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_83xx_hw.c_qlcnic_83xx_poll_flash_status_reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/qlcnic/extr_qlcnic_83xx_hw.c_qlcnic_83xx_poll_flash_status_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qlcnic_adapter = type { i32 }

@QLC_83XX_FLASH_READ_RETRY_COUNT = common dso_local global i32 0, align 4
@QLC_83XX_FLASH_STATUS = common dso_local global i32 0, align 4
@QLC_83XX_FLASH_STATUS_READY = common dso_local global i32 0, align 4
@QLC_83XX_FLASH_STATUS_REG_POLL_DELAY = common dso_local global i32 0, align 4
@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qlcnic_adapter*)* @qlcnic_83xx_poll_flash_status_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qlcnic_83xx_poll_flash_status_reg(%struct.qlcnic_adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.qlcnic_adapter*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.qlcnic_adapter* %0, %struct.qlcnic_adapter** %3, align 8
  %6 = load i32, i32* @QLC_83XX_FLASH_READ_RETRY_COUNT, align 4
  store i32 %6, i32* %5, align 4
  br label %7

7:                                                ; preds = %20, %1
  %8 = load %struct.qlcnic_adapter*, %struct.qlcnic_adapter** %3, align 8
  %9 = load i32, i32* @QLC_83XX_FLASH_STATUS, align 4
  %10 = call i32 @qlcnic_83xx_rd_reg_indirect(%struct.qlcnic_adapter* %8, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @QLC_83XX_FLASH_STATUS_READY, align 4
  %13 = and i32 %11, %12
  %14 = load i32, i32* @QLC_83XX_FLASH_STATUS_READY, align 4
  %15 = icmp eq i32 %13, %14
  br i1 %15, label %16, label %17

16:                                               ; preds = %7
  br label %24

17:                                               ; preds = %7
  %18 = load i32, i32* @QLC_83XX_FLASH_STATUS_REG_POLL_DELAY, align 4
  %19 = call i32 @msleep(i32 %18)
  br label %20

20:                                               ; preds = %17
  %21 = load i32, i32* %5, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %5, align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %7, label %24

24:                                               ; preds = %20, %16
  %25 = load i32, i32* %5, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %30, label %27

27:                                               ; preds = %24
  %28 = load i32, i32* @EIO, align 4
  %29 = sub nsw i32 0, %28
  store i32 %29, i32* %2, align 4
  br label %31

30:                                               ; preds = %24
  store i32 0, i32* %2, align 4
  br label %31

31:                                               ; preds = %30, %27
  %32 = load i32, i32* %2, align 4
  ret i32 %32
}

declare dso_local i32 @qlcnic_83xx_rd_reg_indirect(%struct.qlcnic_adapter*, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
